<?xml version="1.0"?>
<!-- CaPe - A Consent Based Personal Data Suite Copyright (C) 2021 Engineering 
	Ingegneria Informatica S.p.A. This program is free software: you can redistribute 
	it and/or modify it under the terms of the GNU Affero General Public License 
	as published by at your option) any later version. This program is distributed 
	in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even 
	the implied warranty of * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
	See the GNU Affero General Public License for more details. You should have 
	received a copy of the GNU Affero General Public License along with this 
	program. If not, see <http://www.gnu.org/licenses/>. -->
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.3</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>it.eng.opsi.cape</groupId>
	<artifactId>account-manager</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>CaPe Account Manager</name>
	<properties>
		<java.version>16</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<log4j2.version>2.15.0</log4j2.version>
	</properties>

	<dependencyManagement>
	</dependencyManagement>
	<dependencies>

		<!-- SPRING SECURITY - IDM INTEGRATION -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
		</dependency>

		<!-- -->
		<!-- JWT -->
		<dependency>
			<groupId>com.nimbusds</groupId>
			<artifactId>nimbus-jose-jwt</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-jdk15on -->
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk15on</artifactId>
			<version>1.64</version>
		</dependency>
		<!-- -->

		<!-- Misc utitilies -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- -->

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
		</dependency>


		<!-- Spring Boot -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>


		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>

		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>


		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
		</dependency>
		<!-- -->

		<!-- OPENAPI 3 -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-ui</artifactId>
			<version>1.5.10</version>
		</dependency>

		<!-- <dependency> -->
		<!-- <groupId>org.springdoc</groupId> -->
		<!-- <artifactId>springdoc-openapi-data-rest</artifactId> -->
		<!-- <version>1.5.8</version> -->
		<!-- </dependency> -->


	</dependencies>

	<build>
		<finalName>account-manager</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<jvmArguments>-Dspring.application.admin.enabled=true</jvmArguments>
					 <jvmArguments>--illegal-access=permit</jvmArguments>
				</configuration>
				<executions>
					<execution>
						<id>pre-integration-test</id>
						<!-- <goals> -->
						<!-- <goal>start</goal> -->
						<!-- </goals> -->
					</execution>
					<!-- <execution> -->
					<!-- <goals> -->
					<!-- <goal>repackage</goal> -->
					<!-- </goals> -->
					<!-- </execution> -->
					<execution>
						<id>post-integration-test</id>
						<!-- <goals> -->
						<!-- <goal>stop</goal> -->
						<!-- </goals> -->
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-maven-plugin</artifactId>
				<version>0.2</version>
				<executions>
					<!-- <execution> -->
					<!-- <phase>integration-test</phase> -->
					<!-- <goals> -->
					<!-- <goal>generate</goal> -->
					<!-- </goals> -->
					<!-- </execution> -->

				</executions>
				<configuration>
					<apiDocsUrl>http://localhost:8080/account-manager/api-docs</apiDocsUrl>
					<outputFileName>openapi.yaml</outputFileName>
					<!-- <outputDir>/home/springdoc/maven-output</outputDir> -->
				</configuration>
			</plugin>

			<!--jsonschema2pojo plugin to generate-sources from json schema -->
			<plugin>
				<groupId>org.jsonschema2pojo</groupId>
				<artifactId>jsonschema2pojo-maven-plugin</artifactId>
				<version>1.0.1</version>
				<configuration>
					<sourceDirectory>${basedir}/src/main/resources/schema</sourceDirectory>
					<targetPackage>it.eng.opsi.cape.serviceregistry.data</targetPackage>
					<includeAdditionalProperties>false</includeAdditionalProperties>
					<includeConstructors>true</includeConstructors>
					<useTitleAsClassname>true</useTitleAsClassname>
					<removeOldOutput>true</removeOldOutput>
					<useCommonsLang3>true</useCommonsLang3>
					<dateTimeType>java.time.ZonedDateTime</dateTimeType>
					<includeJsr303Annotations>true</includeJsr303Annotations>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
